# ourfood-backend

./: .env  .gitignore  db.sqlite3  env_exemplo  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
media/images/: 1566710f-231b-472c-912c-800556978079  54f7e7e3-0456-44ef-9030-488e53cc31a4  5ef533b1-2b1c-4590-89f1-a0ef4ae8304b  629cac97-ba03-4799-a5ee-1aa3b9341d57  783eb38f-121c-4855-b77a-56d05edf4b19  a00311f4-a494-4d8b-98bf-c4bfc13ff006  bd6f057a-e85f-4167-9365-b91437b6933b  be9930c8-f519-4ca6-b037-6942e3707c02  c37d2aac-05e8-4c41-9c64-2e14ac8385b1  f82ebe00-6919-4b17-a0f6-b2c16d772656
ourfood/: admin.py  apps.py  models.py  views.py
ourfood/migrations/: 0001_initial.py  0002_administrador.py  0002_bebidas_sobremesas.py  0002_fomadepagamento.py  0003_categoria_delete_bebidas_delete_lanches_and_more.py  0003_delete_administrador_remove_pedido_cliente_and_more.py  0003_pagamento.py  0004_fomadepagamento_produto.py  0004_produto.py  0004_remove_itempedido_pedido_alter_itempedido_produto_and_more.py  0005_categoria_teste.py  0005_remove_pedido_data_hora_alter_pedido_status_and_more.py  0006_itempedido_pedido.py  0006_remove_categoria_teste.py  0007_alter_itempedido_preco.py  0007_produto_capa.py  0008_cliente.py  0008_pedido_data.py  0009_remove_pagamento_produto_pedido_tipo_pagamento_and_more.py
ourfood/models/: __init__.py  administrador.py  bebidas.py  cliente.py  clientes.py  formapagamento.py  itempedido.py  lanches.py  pagamento.py  pedido.py  pedidos.py  produto.py  produtos.py  sobremesas.py
ourfood/serializers/: ItemPedido.py  __init__.py  (+12 more)
uploader/: views.py
usuario/: admin.py  models.py  serializers.py  views.py
utils/: files.py
(+16 files in other folders)
