
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Heloisa Rafa Gabi", email = "rafaelaalbano70@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]
