
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "rafaela albano", email = "rafaelaalbano70@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
    "django-cors-headers>=4.2.0",
    "drf-spectacular>=0.26.5",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "django-filter>=23.3",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]
